{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 270,
  "lineage": "17b305b5-19e7-9d3e-f484-0c1fb23ba979",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-22T17:21:10.187-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-on-gcp-426811/global/firewalls/terraform-on-gcp-http-firewall",
            "log_config": [],
            "name": "terraform-on-gcp-http-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-on-gcp-426811/global/networks/terraform-on-gcp-nw",
            "priority": 1000,
            "project": "terraform-on-gcp-426811",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-on-gcp-426811/global/firewalls/terraform-on-gcp-http-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-22T17:21:10.238-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-on-gcp-426811/global/firewalls/terraform-on-gcp-ssh-firewall",
            "log_config": [],
            "name": "terraform-on-gcp-ssh-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-on-gcp-426811/global/networks/terraform-on-gcp-nw",
            "priority": 1000,
            "project": "terraform-on-gcp-426811",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-on-gcp-426811/global/firewalls/terraform-on-gcp-ssh-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "terraform_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-on-gcp-426811/global/networks/terraform-on-gcp-nw",
            "mtu": 0,
            "name": "terraform-on-gcp-nw",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "330574156881646806",
            "project": "terraform-on-gcp-426811",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-on-gcp-426811/global/networks/terraform-on-gcp-nw"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "terraform_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-22T17:20:31.528-07:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/terraform-on-gcp-426811/regions/us-west1/subnetworks/terraform-on-gcp-snw",
            "ip_cidr_range": "10.20.0.0/16",
            "name": "terraform-on-gcp-snw",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-on-gcp-426811/global/networks/terraform-on-gcp-nw",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-on-gcp-426811",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-on-gcp-426811/regions/us-west1/subnetworks/terraform-on-gcp-snw",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.terraform_network"
          ]
        }
      ]
    }
  ]
}